[gd_scene load_steps=4 format=3 uid="uid://c35up713xnlyv"]

[ext_resource type="PackedScene" uid="uid://gvbg3ootwovl" path="res://entity.tscn" id="1_7k104"]
[ext_resource type="Script" uid="uid://b8op68tv7qy0f" path="res://enemy.gd" id="2_4gyqm"]

[sub_resource type="SphereShape3D" id="SphereShape3D_7k104"]

[node name="enemy" instance=ExtResource("1_7k104")]
script = ExtResource("2_4gyqm")
wander_radius = 5.0
chase_speed = 3.0
wander_speed = 1.7

[node name="WanderTimer" type="Timer" parent="." index="4"]
wait_time = 3.0
autostart = true

[node name="AgroRange" type="Area3D" parent="." index="5"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="AgroRange" index="0"]
transform = Transform3D(7, 0, 0, 0, 7, 0, 0, 0, 7, 0, 0, 0)
shape = SubResource("SphereShape3D_7k104")

[connection signal="timeout" from="WanderTimer" to="." method="_on_wander_timer_timeout"]
[connection signal="body_entered" from="AgroRange" to="." method="_on_agro_range_body_entered"]
[connection signal="body_exited" from="AgroRange" to="." method="_on_agro_range_body_exited"]
